--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>List Users</title>
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -13,10 +13,12 @@
 </head>
 
 <body>
-  <div class="user-infor-container">
-    <form method="POST" action="/users/create-user">
-      <div class="container">
-        <div class="row">
+
+  <div class="container">
+    <div class="row">
+      <div class="user-infor-container">
+        <form method="POST" action="/users/create-user">
+
           <div class="pt-3">
             <h3>Create a new user</h3>
           </div>
@@ -37,9 +39,47 @@
           <div class="clo-12">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
-        </div>
+
+        </form>
       </div>
-    </form>
+      <div class="table-user mt-3">
+        <h3>Table users: </h3>
+        <table class="table table-hover table-bordered">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Email</th>
+              <th scope="col">Username</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% userList.forEach(function(item,index){ %>
+              <tr>
+                <th scope="row">
+                  <%= item.id %>
+                </th>
+                <td>
+                  <%= item.email %>
+                </td>
+                <td>
+                  <%= item.username %>
+                </td>
+                <td>
+                  <a class="btn btn-warning" href="/update-user/<%= item.id%>">
+                  Edit
+                  </a>
+                  <!-- bấm nút Delete, form sẽ gửi một request POST đến đường dẫn /delete-user/ID, trong đó ID là item.id -->
+                  <form style="display: inline;" action="/delete-user/<%= item.id%>" method="POST">
+                    <button class="btn btn-danger">Delete</button>
+                  </form>
+                </td>
+              </tr>
+              <% }) %>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 </body>
 
